# OpenVVC

./: prepare_asm.sh
examples/: Makefile.am  fg_compute_block_avg_asm.asm  fg_compute_block_avg_asm.h  filmgraintest.c
libovvc/: pp_film_grain.c
